--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -24,3 +24,7 @@ $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
 // Override other variables below!
+$body-font: 'Bricolage Grotesque', sans-serif;
+$headers-font: 'Bricolage Grotesque', sans-serif;
+$primary: #4300F3;
+$body-color: #131313;
