--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,130 @@
 // External libraries
 @import "bootstrap";
 @import "font-awesome";
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+
+$txt-color: #131313;
+$primary-color: #4300F3;
+$secondary-color: #DC001E;
+$light-color: #d4eced;
+
+
+html{
+  font-family: 'Bricolage Grotesque', sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color: $txt-color;
+}
+
+
+body{
+  background-color: $light-color;
+  color: 131313;
+  font-family: 'Bricolage Grotesque', sans-serif;
+}
+
+h1{
+  font-family: 'Bricolage Grotesque', sans-serif;
+}
+
+header{
+  width: 100%;
+
+}
+
+
+nav{
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  ul{
+    list-style: none;
+    display: flex;
+    gap: 2em;
+    li{
+      cursor: pointer;
+      text-decoration: none;
+
+    }
+  }
+}
+
+
+.logo-header{
+cursor: pointer;
+font-size: 2em;
+color: $txt-color;
+  span{
+  color: $primary-color;
+  }
+}
+
+
+.hero{
+color: $txt-color;
+  font-family: 'Bricolage Grotesque', sans-serif;
+}
+
+.hero-text{
+  font-size: 6em;
+  display: flex;
+  justify-content: flex-start;
+  color: $txt-color;
+  width: 100%;
+}
+
+main{
+  width: 70%;
+  margin: 0 auto;
+}
+
+.list-grid-cont-4{
+  background-color: $txt-color;
+  border-radius: 2em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.5em;
+  margin-top: 3em;
+  padding: 2em;
+  padding-top: 6em;
+  position: relative;
+}
+
+.list-grid-cont-4_tittle{
+  color: $light-color;
+  font-size: 4em;
+  font-family: 'Bricolage Grotesque', sans-serif;
+position: absolute;
+right: 0.6em;
+}
+
+.list-preview-card{
+  border-radius: 2em;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: $primary-color;
+  font-family: 'Bricolage Grotesque', sans-serif;
+  h3{
+    font-family: 'Bricolage Grotesque', sans-serif;
+  }
+}
+
+
+.list-show-tittle{
+
+
+}
