--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <header>
     <nav>
 
-      <p class='logo-header'>film<span>folio</span></p>
+      <%= link_to lists_path do %>
+        <p class='logo-header'>film<span>folio</span></p>
+      <% end %>
 
       <ul>
 
