--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,6 @@
-<h2> Add a list </h2>
+<h2 class="new-list-tittle"> Add a new list </h2>
 
 <%= simple_form_for @list do |f| %>
   <%= f.input :name %>
-  <%= f.submit 'Save', class: 'btn btn-primary' %>
+  <%= f.submit 'Save', class: 'btn btn-primary new-list-btn' %>
 <% end %>
