--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -14,6 +14,7 @@
 
     <% @list.bookmarks.each do |bookmark| %>
         <div>
+
           <%= image_tag(Movie.find(bookmark.movie_id).poster_url) %>
 
           <%= Movie.find(bookmark.movie_id).title %>
@@ -23,6 +24,11 @@
           <%= Movie.find(bookmark.movie_id).overview %>
 
           <%= bookmark.comment %>
+
+          <%= link_to list_path(bookmark.destroy), :class => "trash-icon" do %>
+            <i class="fa-solid fa-trash-can"></i>
+          <% end %>
+
         </div>
     <% end %>
 
@@ -50,7 +56,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Add new bookmark</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
